package DesignPatterns.Proxy.StaticProxy;

/**
 * @author Yu
 */
public interface ITeacherDao {

    void teach();
}
